Minor re-org